Fixed overlap banner on user profile

--- a/resources/assets/sass/components/banner.scss
+++ b/resources/assets/sass/components/banner.scss
@@ -17,8 +17,6 @@
 
 @media (max-width: 991px) {
   .banner {
-    margin-left: -20px;
-    margin-right: -20px;
     padding-left: 25px;
     padding-right: 25px;
     text-align: center;
